k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tool
  labels:
    istio-injection: enabled
---
kind: Service
apiVersion: v1
metadata:
  name: grpc-json-proxy
  namespace: tool
  labels:
    app: grpc-json-proxy
spec:
  ports:
    - name: http
      protocol: TCP
      port: 7001
      targetPort: 6565
  selector:
    app: grpc-json-proxy
  type: NodePort
  sessionAffinity: None
  externalTrafficPolicy: Cluster
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: grpc-json-proxy-stable
  namespace: tool
  labels:
    app: grpc-json-proxy
    version: stable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-json-proxy
      version: stable
  template:
    metadata:
      labels:
        app: grpc-json-proxy
        version: stable
    spec:
      containers:
        - name: grpc-json-proxy
          image: lshare/grpc-json-proxy:stable
          ports:
            - name: http
              containerPort: 7001
              protocol: TCP
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 1000m
              memory: 1000Mi
      imagePullSecrets:
        - name: default-secret
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grpc-json-proxy-gateway
  namespace: tool
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "grpc-json-proxy.test.com"
    - port:
        number: 443
        name: https
        protocol: HTTP
      hosts:
        - "grpc-json-proxy.test.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grpc-json-proxy
  namespace: tool
spec:
  host: grpc-json-proxy
  subsets:
    - name: stable
      labels:
        version: stable
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-json-proxy
  namespace: tool
spec:
  hosts:
    - "grpc-json-proxy.test.com"
  gateways:
    - grpc-json-proxy-gateway
  http:
    - route:
        - destination:
            port:
              number: 7001
            host: grpc-json-proxy
            subset: stable
